# Smartian

./: .gitmodules
script/: .gitignore  B1-ins.csv  B4-ins.csv  README.md  example.json  generate_seeds.sh  generate_seeds_b2.sh  generate_seeds_b4.sh  providers.ini  pyproject.toml  pytest.ini
script/B1_Llama3-70B/B1_Llama3-70B_0.0_10_4_2024-11-26_22-51_deepinfra/2018-10299/: 2018-10299_deepinfra_Llama3-70B_0.0T_testcase_2024-11-26_22-54-34
script/B1_Llama3-70B/B1_Llama3-70B_0.0_10_4_2024-11-26_22-51_deepinfra/2018-10376/: 2018-10376_deepinfra_Llama3-70B_0.0T_testcase_2024-11-26_22-57-08
script/B1_Llama3-70B/B1_Llama3-70B_0.0_10_4_2024-11-26_22-51_deepinfra/2018-10468/: 2018-10468_deepinfra_Llama3-70B_0.0T_testcase_2024-11-26_23-00-16
script/B1_Llama3-70B/B1_Llama3-70B_0.0_10_4_2024-11-26_22-51_deepinfra/2018-10706/: 2018-10706_deepinfra_Llama3-70B_0.0T_testcase_2024-11-26_23-03-31
script/B1_Llama3-70B/B1_Llama3-70B_0.0_10_4_2024-11-26_22-51_deepinfra/2018-11429/: 2018-11429_deepinfra_Llama3-70B_0.0T_testcase_2024-11-26_23-13-45
script/B1_orig/2018-10706/: 2018-10706.sol
script/B1_orig/2018-13722/: 2018-13722.sol
script/B1_orig/2018-13778/: 2018-13778.sol
script/B1_orig/2018-14002/: 2018-14002.sol
script/B1_orig/2018-14086/: 2018-14086.sol
script/B1_orig/2018-17050/: 2018-17050.sol
script/B4_orig/0xBE7D77A4be50EAF8E34Df74944bf06AB9D08773D/: 0xBE7D77A4be50EAF8E34Df74944bf06AB9D08773D.abi
script/datacollect/: __init__.py  ana.py  datacollect.py  restos
script/datacollect/utils/: models.py
script/genai4fuzz/: __init__.py  config.py  genai4fuzz.py
script/genai4fuzz/model/: testcase.py
script/genai4fuzz/services/: chat.py  sast.py  seed.py  solidity.py  testcase.py
script/genai4fuzz/utils/: datafile.py  general.py
script/tests/: test_testcase.py
src/: Smartian.fsproj
(+19744 files in other folders)
